# fst

./: README.md
backend/: Cargo.toml  prometheus.yml
backend/macros/: Cargo.toml
backend/macros/src/: api_error.rs  error_if.rs  lib.rs  validate.rs
backend/macros/src/api_error/: api_error.rs  attr.rs  kw.rs  mod.rs
backend/server/: Cargo.toml
backend/server/src/: affixes.rs  main.rs
backend/server/src/api/: mod.rs
backend/server/src/api/auth/: login.rs  mod.rs  register.rs
backend/server/src/errors/: mod.rs  response.rs
backend/server/src/errors/auth/: login.rs  mod.rs  register.rs
backend/server/src/middleware/: mod.rs
backend/server/src/models/: mod.rs  user.rs
backend/server/src/models/auth/: login.rs  mod.rs  register.rs
backend/server/src/utils/: mod.rs
backend/src/: affixes.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/auth/: login.rs  mod.rs  register.rs  verify_email.rs
backend/src/config/: mod.rs
backend/src/errors/: mod.rs
backend/src/errors/auth/: login.rs  mod.rs  register.rs
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs  user.rs
backend/src/models/auth/: email_verification.rs  login.rs  mod.rs  register.rs
backend/src/models/user/: email_verified.rs  mod.rs
backend/src/utils/: emails.rs  mod.rs  verification_codes.rs
