[workspace]
resolver = "2"
edition = "2021"
members = ["macros", "server"]

[workspace.package]
rust-version = "1.67"

[profile.dev]
codegen-units = 512
debug = 2
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

[workspace.dependencies]
fst-macros = { path = "./macros" }
jsonwebtoken = { version = "8.2", default-features = false }
mongodb = { version = "2.4", default-features = false }
parking_lot = { version = "0.12", default-features = false }
salvo = { version = "0.37", default-features = false, features = [
  "affix",
  "anyhow",
  "jwt-auth",
  "logging",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
time = { version = "0.3", default-features = false }
tokio = { version = "1.26", default-features = false, features = ["macros"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "fmt",
  "parking_lot",
  "smallvec",
  "std",
] }
