[package]
name = "fst-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.69"

[profile.dev]
codegen-units = 512
debug = 2
incremental = true
opt-level = 0

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

[dependencies]
autometrics = { version = "0.4", features = ["prometheus-exporter"] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "8.2", default-features = false }
lettre = { version = "0.10", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1",
  "tokio1-native-tls",
] }
mongodb = { version = "2.4", default-features = false, features = [
  "tokio-runtime",
] }
once_cell = { version = "1.17", default-features = false }
parking_lot = { version = "0.12", default-features = false }
regex = { version = "1.7", default-features = false }
salvo = { version = "0.41", default-features = false, features = [
  "affix",
  "http1",
  "jwt-auth",
  "logging",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0", default-features = false }
time = { version = "0.3", default-features = false }
tokio = { version = "1.26", default-features = false, features = ["macros"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "fmt",
  "parking_lot",
  "smallvec",
  "std",
] }
dotenv = "0.15.0"
rand = { version = "0.8.5", default-features = false }
