[package]
name = "server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
parking_lot = { version = "0.12", default-features = false }
salvo = { workspace = true, features = [
  "affix",
  "anyhow",
  "jwt-auth",
  "logging",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "fmt",
  "parking_lot",
  "smallvec",
  "std",
] }
