[package]
name = "server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
mongodb = { workspace = true, features = ["tokio-runtime"] }
parking_lot = { workspace = true }
salvo = { workspace = true, features = [
  "affix",
  "anyhow",
  "jwt-auth",
  "logging",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "fmt",
  "parking_lot",
  "smallvec",
  "std",
] }
