[package]
name = "fst-server"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
fst-macros = { workspace = true }
mongodb = { workspace = true, features = ["tokio-runtime"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
salvo = { workspace = true, features = [
  "affix",
  "anyhow",
  "jwt-auth",
  "logging",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "fmt",
  "parking_lot",
  "smallvec",
  "std",
  "env-filter",
] }
tracing-timing = "0.6.0"
autometrics = { version = "0.3.2", features = ["prometheus-exporter"] }
argon2 = "0.5.0"
